--- a/index.html
+++ b/index.html
@@ -1,265 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Syed Najeeb Mohiuddin | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Syed Najeeb Mohiuddin | Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
-<!-- NAVBAR -->
-<nav>
-  <div class="logo">
-    <img src="logo.png" alt="SNM Logo">
-  </div>
-  <ul>
-    <li><a href="#home">Home</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#skills">Skills</a></li>
-    <li><a href="#projects">Projects</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
+    <!-- ================= NAVBAR ================= -->
+    <nav>
+        <div class="logo">
+            <img src="logo.png" alt="SNM Logo" />
+        </div>
 
-<!-- HERO -->
-<section id="home">
-  <div class="hero-container">
-    <div class="hero-text">
-      <h1>Hi, I'm Syed Najeeb Mohiuddin</h1>
-      <p>Web Developer | Business Analyst | Digital Marketing Specialist</p>
-      <a href="#contact" class="btn">Contact Me</a>
-    </div>
-    <div class="hero-image">
-      <img src="profile.jpeg" alt="Profile">
-    </div>
-  </div>
-</section>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-<!-- ABOUT -->
-<section id="about" class="reveal">
-  <h2>About Me</h2>
+    <!-- ================= HERO SECTION ================= -->
+    <section id="home">
+        <div class="hero-container">
 
-  <div class="about-content">
-    <p>
-      I am a results-driven <strong>Data Analyst</strong> with hands-on experience in 
-      <strong>Python, SQL, Power BI, and Excel</strong>, specializing in data cleaning, 
-      analysis, visualization, and automation.
-    </p>
+            <div class="hero-text">
+                <h1>Hi, I'm Syed Najeeb Mohiuddin</h1>
+                <p>
+                    Web Developer | Business Analyst | Digital Marketing Specialist
+                </p>
+                <a href="#contact" class="btn">Contact Me</a>
+            </div>
 
-    <p>
-      With over 1 year of dedicated data analytics experience — including supporting 
-      U.S. operations remotely — I focus on transforming complex datasets into 
-      clear, actionable business insights.
-    </p>
+            <div class="hero-image">
+                <img src="profile.jpeg" alt="Profile Image" />
+            </div>
 
-    <p>
-      My background combines 5+ years in IT recruitment, inside sales, and client 
-      relationship management, giving me strong business acumen alongside 
-      technical expertise. I have successfully automated reporting processes, 
-      developed interactive dashboards, and delivered data-driven recommendations 
-      that improved operational efficiency and decision-making.
-    </p>
+        </div>
+    </section>
 
-    <p>
-      With an engineering foundation and strong analytical mindset, I am passionate 
-      about leveraging data to optimize processes, drive performance, and support 
-      strategic growth within dynamic IT and data teams across Saudi Arabia and 
-      the GCC.
-    </p>
-  </div>
-</section>
+    <!-- ================= ABOUT SECTION ================= -->
+    <section id="about" class="reveal">
+        <h2>About Me</h2>
 
+        <div class="about-content">
+            <p>
+                I am a results-driven <strong>Data Analyst</strong> with hands-on
+                experience in <strong>Python, SQL, Power BI, and Excel</strong>,
+                specializing in data cleaning, analysis, visualization, and automation.
+            </p>
 
-<!-- SKILLS -->
-<section id="skills" class="reveal">
-  <h2>My Skills</h2>
-  <div class="skills-container">
-    <div class="skill">SEO</div>
-    <div class="skill">CSS</div>
-    <div class="skill">HTML</div>
-    <div class="skill">JavaScript</div>
-    <div class="skill">Business Analysis</div>
-    <div class="skill">Email Marketing</div>
-    <div class="skill">Market Research</div>
-    <div class="skill">Digital Marketing</div>
-  </div>
-</section>
+            <p>
+                With over 1 year of dedicated data analytics experience — including
+                supporting U.S. operations remotely — I focus on transforming complex
+                datasets into clear, actionable business insights.
+            </p>
 
-<!-- PROJECTS -->
-<section id="projects" class="reveal">
-  <h2>My Projects</h2>
+            <p>
+                My background combines 5+ years in IT recruitment, inside sales, and
+                client relationship management, giving me strong business acumen
+                alongside technical expertise. I have successfully automated reporting
+                processes, developed interactive dashboards, and delivered data-driven
+                recommendations that improved operational efficiency and
+                decision-making.
+            </p>
 
-  <div class="projects-container">
+            <p>
+                With an engineering foundation and strong analytical mindset, I am
+                passionate about leveraging data to optimize processes, drive
+                performance, and support strategic growth within dynamic IT and data
+                teams across Saudi Arabia and the GCC.
+            </p>
+        </div>
+    </section>
 
-    <!-- Project 1 -->
-    <div class="project-card">
-      <div class="project-image">
-        <img src="project1.jpg" alt="National Driving School">
-      </div>
+    <!-- ================= SKILLS SECTION ================= -->
+    <section id="skills" class="reveal">
+        <h2>My Skills</h2>
 
-      <div class="project-content">
-        <h3>National Driving School</h3>
-        <p>
-          Professional driving school website with course details,
-          booking system and responsive design.
-        </p>
+        <div class="skills-container">
+            <div class="skill">SEO</div>
+            <div class="skill">CSS</div>
+            <div class="skill">HTML</div>
+            <div class="skill">JavaScript</div>
+            <div class="skill">Business Analysis</div>
+            <div class="skill">Email Marketing</div>
+            <div class="skill">Market Research</div>
+            <div class="skill">Digital Marketing</div>
+        </div>
+    </section>
 
-        <a href="https://www.nationaldrivingschool.net/" target="_blank" class="project-btn">
-          Visit Website
-        </a>
-      </div>
-    </div>
+    <!-- ================= PROJECTS SECTION ================= -->
+    <section id="projects" class="reveal">
+        <h2>My Projects</h2>
 
-    <!-- Project 2 -->
-    <div class="project-card">
-      <div class="project-image">
-        <img src="project2.jpg" alt="My Tax Pro Now">
-      </div>
+        <div class="projects-container">
 
-      <div class="project-content">
-        <h3>My Tax Pro Now</h3>
-        <p>
-          Tax consulting platform built for U.S. clients with
-          professional layout and lead generation focus.
-        </p><div class="projects-container">
+            <!-- Project 1 -->
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="project1.jpg" alt="National Driving School" />
+                </div>
 
-  <!-- Project 1 -->
-  <div class="project-card reveal">
-    <div class="project-image">
-      <img src="project1.jpg" alt="National Driving School">
-    </div>
+                <div class="project-content">
+                    <h3>National Driving School</h3>
+                    <p>
+                        Professional driving school website with course details,
+                        booking system, and responsive design.
+                    </p>
+                    <a href="https://www.nationaldrivingschool.net/"
+                       target="_blank"
+                       class="project-btn">
+                        Visit Website
+                    </a>
+                </div>
+            </div>
 
-    <div class="project-content">
-      <h3>National Driving School</h3>
+            <!-- Project 2 -->
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="project2.jpg" alt="My Tax Pro Now" />
+                </div>
 
-      <div class="project-tags">
-        <span>HTML</span>
-        <span>CSS</span>
-        <span>JavaScript</span>
-        <span>Responsive</span>
-      </div>
+                <div class="project-content">
+                    <h3>My Tax Pro Now</h3>
+                    <p>
+                        Tax consulting platform built for U.S. clients with
+                        professional layout and lead generation focus.
+                    </p>
+                    <a href="https://mytaxpronow.com/"
+                       target="_blank"
+                       class="project-btn">
+                        Visit Website
+                    </a>
+                </div>
+            </div>
 
-      <p>
-        Professional driving school website with course details,
-        booking system and responsive design.
-      </p>
+            <!-- Project 3 -->
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="project3.jpg" alt="Bell Tech Computer" />
+                </div>
 
-      <div class="project-buttons">
-        <a href="https://www.nationaldrivingschool.net/" target="_blank" class="project-btn">
-          Live Website
-        </a>
-        <a href="#" class="project-btn secondary">
-          View Code
-        </a>
-      </div>
-    </div>
-  </div>
+                <div class="project-content">
+                    <h3>Bell Tech Computer</h3>
+                    <p>
+                        IT solutions website showcasing hardware, services,
+                        and business offerings.
+                    </p>
+                    <a href="https://www.belltechcomputer.com/"
+                       target="_blank"
+                       class="project-btn">
+                        Visit Website
+                    </a>
+                </div>
+            </div>
 
+        </div>
+    </section>
 
-  <!-- Project 2 -->
-  <div class="project-card reveal reverse">
-    <div class="project-image">
-      <img src="project2.jpg" alt="My Tax Pro Now">
-    </div>
+    <!-- ================= CONTACT SECTION ================= -->
+    <section id="contact" class="reveal contact-section">
+        <div class="contact-container">
+            <h2>Contact Me</h2>
 
-    <div class="project-content">
-      <h3>My Tax Pro Now</h3>
+            <form id="contactForm">
+                <input type="email" placeholder="Your Email" required />
+                <textarea placeholder="Your Message" rows="5" required></textarea>
+                <button type="submit" class="contact-btn">Submit</button>
 
-      <div class="project-tags">
-        <span>WordPress</span>
-        <span>SEO</span>
-        <span>Lead Generation</span>
-      </div>
+                <p class="success-message">
+                    ✅ Message Sent Successfully!
+                </p>
+            </form>
+        </div>
+    </section>
 
-      <p>
-        Tax consulting platform built for U.S. clients with
-        professional layout and conversion-focused design.
-      </p>
+    <!-- ================= FOOTER ================= -->
+    <footer class="site-footer">
+        <div class="footer-content">
 
-      <div class="project-buttons">
-        <a href="https://mytaxpronow.com/" target="_blank" class="project-btn">
-          Live Website
-        </a>
-        <a href="#" class="project-btn secondary">
-          View Code
-        </a>
-      </div>
-    </div>
-  </div>
+            <div class="footer-left">
+                <img src="logo.png" alt="SNM Logo" />
+                <p>© 2026 Syed Najeeb Mohiuddin</p>
+            </div>
 
+            <ul class="footer-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
 
-  <!-- Project 3 -->
-  <div class="project-card reveal">
-    <div class="project-image">
-      <img src="project3.jpg" alt="Bell Tech Computer">
-    </div>
+        </div>
+    </footer>
 
-    <div class="project-content">
-      <h3>Bell Tech Computer</h3>
+    <script src="script.js"></script>
 
-      <div class="project-tags">
-        <span>IT Services</span>
-        <span>Business Website</span>
-        <span>UI Design</span>
-      </div>
-
-      <p>
-        IT solutions website showcasing hardware, services,
-        and business offerings with strong brand presentation.
-      </p>
-
-      <div class="project-buttons">
-        <a href="https://www.belltechcomputer.com/" target="_blank" class="project-btn">
-          Live Website
-        </a>
-        <a href="#" class="project-btn secondary">
-          View Code
-        </a>
-      </div>
-    </div>
-  </div>
-
-</div>
-
-
-<!-- CONTACT -->
-<section id="contact" class="reveal contact-section">
-  <div class="contact-container">
-    <h2>Contact Me</h2>
-    <form id="contactForm">
-      <input type="email" placeholder="Your Email" required>
-      <textarea placeholder="Your Message" rows="5" required></textarea>
-      <button type="submit" class="contact-btn">Submit</button>
-      <p class="success-message">✅ Message Sent Successfully!</p>
-    </form>
-  </div>
-</section>
-
-<!-- ================= FOOTER ================= -->
-<footer class="site-footer">
-  <div class="footer-content">
-    <div class="footer-left">
-      <img src="logo.png" alt="SNM Logo">
-      <p>© 2026 Syed Najeeb Mohiuddin</p>
-    </div>
-
-    <ul class="footer-links">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </div>
-</footer>
-
-
-<script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
