--- a/index.html
+++ b/index.html
@@ -203,5 +203,9 @@
 
     <script src="script.js"></script>
 
+    <!-- Background Shapes -->
+    <div class="background-shapes"></div>
+
 </body>
 </html>
+
