--- a/index.html
+++ b/index.html
@@ -201,6 +201,14 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script>
+     (function(){
+       emailjs.init("z_ytbr_vYRgxOVRAs");
+    })();
+    </script>
+
+<script src="script.js"></script>
     <script src="script.js"></script>
 
     <!-- Background Shapes -->
@@ -208,4 +216,5 @@
 
 </body>
 </html>
+
 
