--- a/index.html
+++ b/index.html
@@ -165,21 +165,23 @@
     </section>
 
     <!-- ================= CONTACT SECTION ================= -->
-    <section id="contact" class="reveal contact-section">
-        <div class="contact-container">
-            <h2>Contact Me</h2>
+  <section id="contact" class="reveal contact-section">
+    <div class="contact-container">
+        <h2>Contact Me</h2>
 
-            <form id="contactForm">
-                <input type="email" placeholder="Your Email" required />
-                <textarea placeholder="Your Message" rows="5" required></textarea>
-                <button type="submit" class="contact-btn">Submit</button>
+        <form id="contactForm">
+            
+            <input type="email" name="user_email"  placeholder="Your Email" required />
+            <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+            <button type="submit" class="contact-btn">  Submit   </button>
+            <p class="success-message">
+                ✅ Message Sent Successfully!
+            </p>
 
-                <p class="success-message">
-                    ✅ Message Sent Successfully!
-                </p>
-            </form>
-        </div>
-    </section>
+        </form>
+    </div>
+</section>
+
 
     <!-- ================= FOOTER ================= -->
     <footer class="site-footer">
@@ -217,6 +219,7 @@
     
 </body>
 </html>
+
 
 
 
