--- a/index.html
+++ b/index.html
@@ -179,6 +179,12 @@
             </p>
 
         </form>
+        
+        <div class="contact-info">
+          <p>📞 <a href="tel:+966579363335">+966 57 936 3335</a></p>
+             <a href="https://wa.me/966579363335" target="_blank" class="whatsapp-btn"> <img src="whatsapp.png" alt="WhatsApp"> Chat on WhatsApp </a>
+        </div>
+
     </div>
 </section>
 
@@ -219,6 +225,7 @@
     
 </body>
 </html>
+
 
 
 
