--- a/index.html
+++ b/index.html
@@ -222,9 +222,12 @@
     </script>
 
     <script src="script.js"></script>
+
+    <a href="https://wa.me/966579363335" class="whatsapp-float" target="_blank"> <img src="whatsapp.png" alt="WhatsApp"></a>
     
 </body>
 </html>
+
 
 
 
