--- a/index.html
+++ b/index.html
@@ -180,10 +180,11 @@
 
         </form>
         
-        <div class="contact-info">
-          <p>📞 <a href="tel:+966579363335">+966 57 936 3335</a></p>
-             <a href="https://wa.me/966579363335" target="_blank" class="whatsapp-btn"> <img src="whatsapp.png" alt="WhatsApp"> Chat on WhatsApp </a>
+        <div class="contact-info-modern">
+            <div class="contact-item"> <span>📞</span> <a href="tel:+966579363335">+966 57 936 3335</a> </div>
+            <div class="contact-item whatsapp-link"> <img src="whatsapp.png" alt="WhatsApp"> <a href="https://wa.me/966579363335" target="_blank"> WhatsApp </a> </div>
         </div>
+
 
     </div>
 </section>
@@ -227,6 +228,7 @@
     
 </body>
 </html>
+
 
 
 
