--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         
         <div class="contact-info-modern">
             <div class="contact-item"> <span>📞</span> <a href="tel:+966579363335">+966 57 936 3335</a> </div>
-            <div class="contact-item whatsapp-link"> <img src="whatsapp-green.svg" alt="WhatsApp"> <a href="https://wa.me/966579363335" target="_blank"> WhatsApp </a> </div>
+            <div class="contact-item whatsapp-link"> <img src="whatsapp-green.png" alt="WhatsApp"> <a href="https://wa.me/966579363335" target="_blank"> WhatsApp </a> </div>
         </div>
 
 
@@ -228,6 +228,7 @@
     
 </body>
 </html>
+
 
 
 
